kubernetes/practice/multi_container.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busybox
  name: busybox
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - ls;sleep 3600
    image: busybox
    name: busybox1
  - args:
    - /bin/sh
    - -c
    - echo "Hello World";sleep 3600
    image: busybox
    name: busybox2
  - args:
    - /bin/sh
    - -c
    - echo "this the third container";sleep 3600
    image: busybox
    name: busybox3
 schedulerName: my-scheduler
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
